<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/opc1" android:title="@string/opc_1" android:icon="@android:drawable/btn_star"
        app:showAsAction="always"/>
    <item android:id="@+id/opc2" android:title="@string/opc_2" android:icon="@android:drawable/ic_dialog_info"
        app:showAsAction="always">
        <!-- Submenú en la opción 2-->
        <menu>
            <item android:id="@+id/subopc2_1" android:title="@string/subop2_1"/>
            <item android:id="@+id/subopc2_2" android:title="@string/subopc2_2"/>
        </menu>
    </item>
    <item android:id="@+id/opc3" android:title="@string/opc_3"
        android:icon="@android:drawable/ic_dialog_alert" app:showAsAction="ifRoom"/>
    <item android:id="@+id/opc4" android:title="@string/opc_4"
        android:icon="@android:drawable/btn_radio" app:showAsAction="ifRoom"/>
</menu>